--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
           <h1 class="tituloLogin">SIGN-IN</h1>
           <br />
 
-          <p id="dadosInvalidos">TESTE</p>
+        
+          <p id="dadosInvalidos"></p>
 
           <input type="text" class="inputLoginEmail" placeholder="Email" />
           <img
